--- a/src/main/resources/templates/newsletterDetails.html
+++ b/src/main/resources/templates/newsletterDetails.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
    <meta charset="utf-8" />
    <meta content="width=device-width,initial-scale=1" name="viewport" />
@@ -77,7 +77,7 @@
                      </button>
                      <ul class="dropdown-menu confirm-delete">
                         <li>
-                           <button type="submit" class="btn btn-link" form="delte-newsletter">Löschen</button>
+                           <button type="submit" class="btn btn-link" form="delete-newsletter">Löschen</button>
                         </li>
                      </ul>
                </form>
