--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -1,30 +1,36 @@
 
 main {
-   width: 60%;
-   margin: 0 auto;
+    width: 60%;
+    margin: 0 auto;
+    padding-bottom: 2em;
 }
 
 .status {
-   display: flex;
-   margin: 0.5em;
-   padding: 1em;
-   min-height: 4em;
-   border-radius: 5px;
-   align-items: center;
+    display: flex;
+    margin: 0.5em;
+    padding: 1em;
+    min-height: 4em;
+    border-radius: 5px;
+    align-items: center;
 }
 
 #status {
-   margin: 2em 15% 0 15%;
+    margin: 2em 15% 0 15%;
 }
 
 .status p {
-   margin: 0 auto;
+    margin: 0 auto;
 }
+
 .item-title {
-   display: inline-block;
-   width: 15%;
+    display: inline-block;
+    width: 15%;
 }
 
 ul.dropdown-menu.confirm-delete {
-   text-align: center;
+    text-align: center;
+}
+
+td {
+    padding-left: 1em !important;
 }
