Updated site titles

--- a/src/main/resources/templates/newsletterDetails.html
+++ b/src/main/resources/templates/newsletterDetails.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8" />
    <meta content="width=device-width,initial-scale=1" name="viewport" />
-   <title>Bootstrap Tests</title>
+   <title>Newsletter Details | Adebar</title>
    <script type="text/javascript" src="../static/resources/js/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"></script>
    <script type="text/javascript" src="../static/resources/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
