--- a/src/main/resources/templates/newsletters.html
+++ b/src/main/resources/templates/newsletters.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width,initial-scale=1" name="viewport"/>
-    <title>Newsletter</title>
+    <title>Newsletter | Adebar</title>
     <script type="text/javascript" src="../static/resources/js/jquery.min.js"
             th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" src="../static/resources/js/bootstrap.min.js"
