--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -85,19 +85,19 @@
                       <div class="form-group">
                           <label for="edit-firstname" class="col-sm-3 control-label">Vorname</label>
                           <div class="col-sm-9">
-                              <input type="text" id="edit-firstname" name="firstname" class="form-control" placeholder="Vorname" th:field="*{firstName}"/>
+                              <input type="text" id="edit-firstname" name="firstname" class="form-control" placeholder="Vorname" required="required" th:field="*{firstName}"/>
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="edit-lastname" class="col-sm-3 control-label">Nachname</label>
                           <div class="col-sm-9">
-                              <input type="text" id="edit-lastname" name="lastname" class="form-control" placeholder="Nachname" th:field="*{lastName}"/>
+                              <input type="text" id="edit-lastname" name="lastname" class="form-control" placeholder="Nachname" required="required" th:field="*{lastName}"/>
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="edit-email" class="col-sm-3 control-label">E-Mail</label>
                           <div class="col-sm-9">
-                              <input type="email" id="edit-email" name="email" class="form-control" placeholder="E-Mail" th:field="*{email}"/>
+                              <input type="email" id="edit-email" name="email" class="form-control" placeholder="E-Mail" required="required" th:field="*{email}"/>
                           </div>
                       </div>
                       <div class="form-group">
@@ -227,8 +227,8 @@
             <div class="col-md-8">
               <form id="add-qualification-form" class="form-horizontal tab-content" method="post" th:object="${addQualificationForm}" th:action="@{'/persons/' + ${person.id} + '/add-qualification'}">
                 <div role="tabpanel" class="tab-pane fade in active" id="add-qualification-tab-existing">
-                  <select id="add-qualification-existing" class="selectpicker" data-live-search="true" th:field="*{qualification}" th:remove="all-but-first" th:each="qualification : ${qualifications}">
-                    <option th:text="${qualification.name}" th:value="${{qualification.name}}" th:field="*{qualification}">Erste-Hilfe-Kurs</option>
+                  <select id="add-qualification-existing" class="selectpicker" data-live-search="true" th:field="*{qualification}" th:remove="all-but-first">
+                    <option th:each="qualification : ${allQualifications}" th:text="${qualification.name}" th:value="${{qualification.name}}" th:field="*{qualification}">Erste-Hilfe-Kurs</option>
                     <option>Storchenkoffer</option>
                     <option>Öffentlichkeitsarbeit</option>
                   </select>
@@ -302,8 +302,8 @@
                    </div>
                 </header>
                 <ul class="list-group">
-                    <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-user"></span> Name:</span> <span th:value="${person.name}">Max Mustermann</span></li>
-                    <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-calendar"></span> Geburtsdatum:</span> <span th:value="${person.dateOfBirth}">30.02.1999</span></li>
+                    <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-user"></span> Name:</span> <span th:text="${person.name}">Max Mustermann</span></li>
+                    <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-calendar"></span> Geburtsdatum:</span> <span th:text="${{person.dateOfBirth}}">30.02.1999</span></li>
                     <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-envelope"></span> E-Mail Adresse:</span> <a href="mailto:max_muster@aol.com" th:href="'mailto:' + ${person.email}" th:text="${person.email}">max_muster@aol.com</a></li>
                     <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-home"></span> Adresse:</span> <span th:text="${person.address.street} + ', ' + ${person.address.zip} + ' ' + ${person.address.city}">Zu Hause 15, 01234 Entenhausen</span></li>
                     <li class="list-group-item"><span class="item-title"><span class="glyphicon glyphicon-cutlery"></span> Vegetarier o.ä.:</span> <span th:text="${person.eatingHabit}">Veganer, Laktose-intolerant</span></li>
