Persons may be disabled now
Instead of deleting persons physically from the database they will only
be anonymized and removed from selection dialogs, e.g. for camp
participants. This should keep statistics sound.

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -84,6 +84,14 @@ fieldset.inline-options label {
 	text-align: center;
 }
 
+.dropdown-menu-lg {
+    width: 30em;
+    left: 50%;
+    right: auto;
+    text-align: center;
+    transform: translate(-50%, 0);
+}
+
 .panel-title small {
     font-size: 0.9em;
 }
