--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -159,7 +159,7 @@
               <footer class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
                   <form method="post" class="btn-group" th:action="@{'/persons/' + ${person.id} + '/delete'}">
-                      <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspop="true" aria-expanded="false">
+                      <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspop="true" aria-expanded="false" th:attrappend="disabled=${isActivist || isReferent}?'disabled'">
                          <span class="glyphicon glyphicon-trash"></span> Löschen <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu dropdown-menu-lg confirm-delete">
@@ -307,6 +307,21 @@
     <section id="content" class="tab-content" style="margin-top: 2em;">
 
             <h1>Personen Details</h1>
+
+            <!-- status messages -->
+            <section>
+                <h2 class="hidden">Status</h2>
+
+                <div class="alert alert-danger alert-dismissible" role="alert" th:if="${deletionError}">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Schließen">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <p>
+                        Die Person konnte nicht gelöscht werden. Vielleicht ist sie ein Aktiver oder Referent?
+                    </p>
+                </div>
+
+            </section>
 
             <section class="panel panel-default">
                 <header class="panel-heading clearfix">
