--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -5,26 +5,18 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width,initial-scale=1" name="viewport"/>
     <title>Personen | Adebar</title>
-    <script type="text/javascript" src="../static/resources/js/jquery.min.js"
-        th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" src="../static/resources/js/bootstrap.min.js"
-        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css"
-        th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <script type="text/javascript" src="../static/resources/js/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" src="../static/resources/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css"
-        th:href="@{/resources/css/style.css}"/>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css" th:href="@{/resources/css/style.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/loading.css"
-        th:href="@{/resources/css/loading.css}"/>
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/loading.css" th:href="@{/resources/css/loading.css}"/>
 
-    <script type="text/javascript" src="../static/resources/js/list.min.js"
-        th:src="@{/resources/js/list.min.js}"></script>
-    <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js"
-        th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
+    <script type="text/javascript" src="../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"></script>
+    <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-select.min.css"
-        th:href="@{/resources/css/bootstrap-select.min.css}" />
+    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-select.min.css" th:href="@{/resources/css/bootstrap-select.min.css}" />
     <script type="text/javascript" src="../static/resources/js/bootstrap-select.min.js" th:src="@{/resources/js/bootstrap-select.min.js}"></script>
 
     <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-datetimepicker.min.css" th:href="@{/resources/css/bootstrap-datetimepicker.min.css}" />
@@ -151,15 +143,15 @@
                                 <div class="col-sm-9">
                                     <fieldset id="gender">
                                         <label class="radio-inline">
-                                            <input type="radio" name="gender" value="FEMALE" checked="checked" th:field="*{gender}" />
+                                            <input type="radio" name="gender" value="FEMALE" required="required" checked="checked" th:field="*{gender}" />
                                             Weiblich
                                         </label>
                                         <label class="radio-inline">
-                                            <input type="radio" name="gender" value="MALE" th:field="*{gender}" />
+                                            <input type="radio" name="gender" value="MALE" required="required" th:field="*{gender}" />
                                             Männlich
                                         </label>
                                         <label class="radio-inline">
-                                            <input type="radio" name="gender" value="OTHER" th:field="*{gender}" />
+                                            <input type="radio" name="gender" value="OTHER" required="required" th:field="*{gender}" />
                                             Anderes
                                         </label>
                                     </fieldset>
