Adding animation to nabu membership number filter

--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -367,7 +367,7 @@
                                                 <option value="IGNORE">Keine NABU-Mitglieder</option>
                                             </select>
                                         </div>
-                                        <div id="filter-nabu-membership-number" class="hidden">
+                                        <div id="filter-nabu-membership-number" class="hide-initially">
                                             <input type="text" class="form-control" name="nabuMembershipNumber" placeholder="Mitgliedsnummer" th:field="*{nabuMembershipNumber}" />
                                         </div>
                                     </div>
